5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4328/executions/1643_2703.log
== TEST (2019-04-15 12:13:37) 
-- CODE:

idade = int(input())

if (idade >= 18):
	print(eleitor)
else:
	print(nao_leitor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nao_leitor)
NameError: name 'nao_leitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:14:19) 
-- CODE:

idade = int(input())

if (idade >= 18):
	print(eleitor)
else:
	print(nao_leitor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nao_leitor)
NameError: name 'nao_leitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:14:38) 
-- CODE:

idade = int(input())

if (idade >= 18):
	print("eleitor")
else:
	print("nao_leitor")
-- OUTPUT:
nao_leitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:14:48) 
-- CODE:

idade = int(input())

if (idade >= 18):
	print("eleitor")
else:
	print("nao_leitor")
-- OUTPUT:
nao_leitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:14:52) 
-- CODE:

idade = int(input())

if (idade >= 18):
	print("eleitor")
else:
	print("nao_leitor")
-- OUTPUT:
nao_leitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:15:00) 
-- CODE:

idade = int(input())

if (idade >= 18):
	print("eleitor")
else:
	print("nao_leitor")
-- EXECUTION TIME:
0.225597
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_leitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:15:32) 
-- CODE:

idade = int(input())

if (idade >= 18):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:15:40) 
-- CODE:

idade = int(input())

if (idade >= 18):
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.171788
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
